fix: add fallback token
Signed-off-by: alperozturk <alper_ozturk@proton.me>